# csapex_python

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  plugins.xml  setup.py
include/csapex_python/: python_apex_api.hpp
python/csapex/: __init__.py
src/: python_apex_api.cpp  python_node.cpp  python_node.h  python_node_adapter.cpp  python_node_adapter.h  python_wrapper.cpp  python_wrapper.h  register_python.cpp
